Organize imports & format buffer before saving Python files

--- a/custom.org
+++ b/custom.org
@@ -1750,7 +1750,11 @@ function.
                   ("C-M-b" . python-nav-backward-sexp)
                   ("C-M-n" . python-nav-forward-block)
                   ("C-M-p" . python-nav-backward-block))
-      :hook ((python-mode . blacken-mode)
+      :hook ((before-save . (lambda ()
+                              (when (eq major-mode 'python-mode)
+                                (lsp-organize-imports)
+                                (lsp-format-buffer))))
+             (python-mode . blacken-mode)
              (python-mode . electric-pair-mode)
              (python-mode . flycheck-mode)
              (python-mode . lsp-deferred)
