Update post-commit hook

--- a/custom.org
+++ b/custom.org
@@ -118,14 +118,17 @@ function.
    site.
 
    #+begin_src sh
-     #!/bin/sh
+     #!/bin/bash
+
+     repo_root=$(git rev-parse --show-toplevel)
+     htmlize_dir=$(dirname "$(find "${repo_root}" -type f -name htmlize.el)")
 
      emacs --batch \
-           --directory '~/.emacs.d/site-lisp/org-mode/lisp' \
-           --load '~/.emacs.d/elisp/k20e-org-html-export.el' \
-           --visit '~/.emacs.d/custom.org' \
-           --execute '(org-html-export-to-html)' 2>&1
-     rm -f *~
+           --directory "${htmlize_dir}" \
+           --directory "$HOME/.emacs.d/site-lisp/org-mode/lisp" \
+           --load "$HOME/.emacs.d/elisp/k20e-org-html-export.el" \
+           --visit "$HOME/.emacs.d/custom.org" \
+           --execute '(org-html-export-to-html)' > /dev/null 2>&1
      git checkout gh-pages
      mv custom.html index.html
      git add index.html
