--- a/custom.org
+++ b/custom.org
@@ -496,30 +496,29 @@ function.
 ** Windows
 
    #+begin_src emacs-lisp
-     (use-package ivy :ensure t)
+     (use-package windmove :ensure t)
 
-     (defun split-window-right-and-balance-and-go-there-and-switch-buffer (&optional arg)
-       "Optional argument ARG Prefix argument will switch buffer using ivy."
-       (interactive "P")
-       (split-window-right)
-       (balance-windows-area)
-       (windmove-right)
-       (if arg
-           (ivy-switch-buffer)
-         (switch-to-buffer nil)))
+     (use-package emacs
+       :init
+       (defun k20e/delete-window-balance ()
+         "Balance windows after deleting."
+         (interactive)
+         (delete-window)
+         (balance-windows-area))
 
-     (defun delete-window-and-balance ()
-       "Balance windows after deleting."
-       (interactive)
-       (delete-window)
-       (balance-windows-area))
-   #+end_src
-
-   Bind window functions:
-
-   #+begin_src emacs-lisp
-     (global-set-key (kbd "C-x 0") 'delete-window-and-balance)
-     (global-set-key (kbd "C-x 3") 'split-window-right-and-balance-and-go-there-and-switch-buffer)
+       (defun k20e/split-window-right-switch-buffer (&optional arg)
+         "Split the window to the right, balance, and switch to buffer.
+     Optional argument ARG Prefix argument will prompt for buffer
+     name."
+         (interactive "P")
+         (split-window-right)
+         (balance-windows-area)
+         (windmove-right)
+         (if arg
+             (switch-to-buffer (read-buffer "Buffer to display to right: "))
+           (switch-to-buffer nil)))
+       :bind (("C-x 3" . k20e/split-window-right-switch-buffer)
+              ("C-x 0" . k20e/delete-window-balance)))
    #+end_src
 
 ** Networking
@@ -705,13 +704,11 @@ function.
   #+begin_src emacs-lisp
     (use-package counsel
       :ensure t
-      :bind (("M-x" . counsel-M-x)
-         ("C-x C-f" . counsel-find-file)
-         ("<f1> f" . counsel-describe-function)
-         ("<f1> v" . counsel-describe-variable)
-         ("<f1> l" . counsel-find-library)
-         ("<f1> s" . counsel-info-lookup-symbol)
-         ("C-x 8 RET" . counsel-unicode-char)))
+      :bind (("<f1> f" . counsel-describe-function)
+             ("<f1> v" . counsel-describe-variable)
+             ("<f1> l" . counsel-find-library)
+             ("<f1> s" . counsel-info-lookup-symbol)
+             ("C-x 8 RET" . counsel-unicode-char)))
   #+end_src
 
 * dired
@@ -1119,11 +1116,7 @@ function.
       :config
       (setq ivy-extra-directories nil
             ivy-use-virtual-buffers t
-            ivy-wrap t)
-      :bind (("C-c C-r" . ivy-resume)
-             ("C-x b" . ivy-switch-buffer)))
-
-    (ivy-mode 1)
+            ivy-wrap t))
   #+end_src
 
   #+begin_quote
@@ -1444,8 +1437,6 @@ function.
 ** Key Bindings
 
    #+begin_src emacs-lisp
-     (require 'ivy)
-
      (global-set-key (kbd "<f12>") 'org-agenda-list)
      (global-set-key (kbd "C-c a") 'org-agenda)
      (global-set-key (kbd "C-c l") 'org-store-link)
@@ -1453,7 +1444,6 @@ function.
 
      (define-key org-mode-map (kbd "<return>") 'org-return-indent)
      (define-key org-mode-map (kbd "M-<return>") 'org-meta-return)
-     (define-key org-mode-map (kbd "C-c C-r") 'ivy-resume)
      (define-key org-mode-map (kbd "C-j") 'join-line)
      (define-key org-mode-map (kbd "C-m") 'org-return-indent)
      (define-key org-mode-map (kbd "H-<tab>") 'pcomplete)
@@ -1858,6 +1848,8 @@ function.
          yaml-mode)
        "Common major modes to create scratch buffers for.")
 
+     (use-package ivy :ensure t)
+
      (defun k20e/scratch-buffer ()
        "Generate a new scratch buffer.
      Choose from `k20e/scratch-buffer-modes' list of major modes to
@@ -2131,6 +2123,14 @@ function.
     (use-package uniquify
       :config
       (setq uniquify-buffer-name-style 'forward))
+  #+end_src
+
+* vertico
+
+  #+begin_src emacs-lisp
+    (use-package vertico
+      :ensure t
+      :init (vertico-mode))
   #+end_src
 
 * windmove
