--- a/custom.org
+++ b/custom.org
@@ -703,12 +703,7 @@ function.
 
   #+begin_src emacs-lisp
     (use-package counsel
-      :ensure t
-      :bind (("<f1> f" . counsel-describe-function)
-             ("<f1> v" . counsel-describe-variable)
-             ("<f1> l" . counsel-find-library)
-             ("<f1> s" . counsel-info-lookup-symbol)
-             ("C-x 8 RET" . counsel-unicode-char)))
+      :ensure t)
   #+end_src
 
 * dired
