--- a/custom.org
+++ b/custom.org
@@ -2080,15 +2080,33 @@ function.
   #+begin_src emacs-lisp
     (use-package vertico
       :ensure t
-      :custom (vertico-cycle 1)
+      :custom
+      (setq vertico-cycle t
+            vertico-preselect 'directory)
       :init (vertico-mode))
   #+end_src
 
-** TODO [0/3] Other Configuration & Extensions
+** TODO [1/3] Other Configuration & Extensions
 
    - [ ] https://github.com/minad/vertico#extensions
    - [ ] https://github.com/minad/vertico#completion-at-point-and-completion-in-region
-   - [ ] [[https://github.com/minad/vertico/wiki#make-vertico-and-vertico-directory-behave-more-like-ivyido]]
+   - [X] [[https://github.com/minad/vertico/wiki#make-vertico-and-vertico-directory-behave-more-like-ivyido]]
+
+** vertico-directory
+
+   [[https://github.com/minad/vertico/blob/main/extensions/vertico-directory.el][vertico-directory]] is an extension which provides Ido-like directory navigation.  It is vendored in the =vertico=
+   repo. so do not =:ensure t= here.
+
+   #+begin_src emacs-lisp
+     (use-package vertico-directory
+       :after vertico
+       :demand
+       :bind (:map vertico-map
+                   ("RET" . vertico-directory-enter)
+                   ("DEL" . vertico-directory-delete-char)
+                   ("M-DEL" . vertico-directory-delete-word))
+       :hook (rfn-eshadow-update-overlay . vertico-directory-tidy))
+   #+end_src
 
 ** orderless
 
