--- a/custom.org
+++ b/custom.org
@@ -2080,10 +2080,10 @@ function.
   #+begin_src emacs-lisp
     (use-package vertico
       :ensure t
-      :custom
+      :init
+      (vertico-mode)
       (setq vertico-cycle t
-            vertico-preselect 'directory)
-      :init (vertico-mode))
+            vertico-preselect 'directory))
   #+end_src
 
 ** TODO [1/3] Other Configuration & Extensions
