Try out consult-buffer

--- a/custom.org
+++ b/custom.org
@@ -2102,7 +2102,8 @@ function.
      (use-package consult
        :ensure t
        :demand
-       :bind (("C-x C-a" . consult-ripgrep)
+       :bind (("C-x b". consult-buffer)
+              ("C-x C-a" . consult-ripgrep)
               ("C-x C-g" . consult-git-grep)))
    #+end_src
 
